Dokonczylem implementacje env (konfiguracji taka forma settings), uruchomilem logowanie danych (defaultowo 7dni) w bazie danych. Ulepszylem java GUI zeby mialo to samo co web ui. W web gui dodalem opcje wyswietlania wykresu pojedynczych wartosci dla danego pakietu (pojedynczego BMS).  build_and_run_gui ma teraz opcje kompilowania do pliku jar za pomoca --package co pozwala na skopiowanie . gotowego jar na inny komputer. Skrypt run_full_stack juz nie wlacza gui javafx. Skrypt ten wlacza jedynie API oraz Web.  Dodatkowo dodalem HEARBEAT do skryptu dla RPI ktory pozwala latwo sprawdzic czy RPI odpowiada i czy skrypt dziala.